--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
     </h1>
     <hr width="1000px;" color="red"
     size="10">
-    <img src="my_pic.jpg" alt="My Image">
+    <img src="my_pic.png" alt="My Image">
 <p>You can provide you details here for further communication. Thank you</p>
 <br>
    <form  class="" action="mailto:akhileshshukla2901@gmail.com" method="post" enctype="text/plain">
